# kabilan108.com

./: .cursorrules  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  biome.json  bun.lockb  compose.yml  default.conf  flake.nix  index.html  llama-vim-analysis.md  nginx.conf  nginx.conf.sigil  opencode.json  package-lock.json  package.json  sweep-jetbrains-analysis.md  sweep-nvim-implementation-plan.md  tailwind.config.js  vercel.json  vite.config.ts
.github/workflows/: build-push-ghcr.yml  deploy-dokku.yml  deploy.yml  release-image.yml
content/: profile.json  projects.json  resume.json
content/drafts/: hello-there.md
content/posts/: hello-there.md
frontend/: Dockerfile  bun.lockb  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: index.tsx  lists.tsx  tagged-item-list.tsx  ui.tsx
frontend/src/lib/: api-client.ts  logger.ts  types.ts  utils.ts
frontend/src/pages/: home.tsx  posts.tsx  projects.tsx  resume.tsx  (+1 more)
scripts/: spotify-auth.ts
server/: Dockerfile  bucket.py  config.py  main.py  pyproject.toml  schema.py
server/routes/: __init__.py  s3.py
server/src/server/: bucket.py  config.py  deps.py  main.py  schema.py
server/src/server/routes/: s3.py
src/: App.tsx  index.css  vite-env.d.ts
src/components/: catppuccin.tsx  lists.tsx  md.tsx  sccm-modal.tsx  tagged-item-list.tsx  ui.tsx
src/lib/: api-client.ts  content.ts  data-stores.ts  types.ts  utils.ts
src/pages/: home.tsx  post.tsx  posts.tsx  projects.tsx  resume.tsx  writing.tsx
