[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.24",
    "fastapi[standard]>=0.115.0",
    "logfire[fastapi,system-metrics]>=2.1.2",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython-icat>=0.2.0",
]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
